@@ -120,8 +120,8 @@ else
         // Check to see if engage isn't set or if triptime is larger than 100 and engage is set to 1
         if ( is_null ($engage) || ($triptime > 100 && $engage == 1))
         {
-            // Handle the fuel scoop.
-            $energyscooped = HandleFuelScoop($playerinfo, $distance, $triptime, $bntreg);
+            // Calculate the amount of fuel that was scooped during transit
+            $energyscooped = BntMove::calcFuelScooped($playerinfo, $distance, $triptime, $bntreg);
 
             // Output:
             // With your engines, it will take X turns to complete the journey.
@@ -152,8 +152,8 @@ else
         }
         elseif ($engage > 0)
         {
-            // Handle the fuel scoop.
-            $energyscooped = HandleFuelScoop($playerinfo, $distance, $triptime, $bntreg);
+            // Calculate the amount of fuel that was scooped during transit
+            $energyscooped = BntMove::calcFuelScooped($playerinfo, $distance, $triptime, $bntreg);
 
             if ($triptime > $playerinfo['turns'])
             {
@@ -191,50 +191,9 @@ else
                 }
             }
         }
-
     }
-
 }
 
 BntText::gotoMain ($db, $lang, $langvars);
 include './footer.php';
-
-// Now for our functions.
-function HandleFuelScoop($playerinfo, $distance, $triptime, $bntreg)
-{
-    // Check if we have a fuel scoop
-    if ($playerinfo['dev_fuelscoop'] == "Y")
-    {
-        // We have a fuel scoop, now calculate the amount of energy scooped.
-        $energyscooped = $distance * 100;
-    }
-    else
-    {
-        // Nope, the FuelScoop won't be installed until next Tuesday (Star Trek quote) :P
-        $energyscooped = 0;
-    }
-
-    // Seems this will never happen ?
-    if ($playerinfo['dev_fuelscoop'] == "Y" && $energyscooped == 0 && $triptime == 1)
-    {
-        $energyscooped = 100;
-    }
-
-    // Calculate the free power for the ship.
-    $free_power = BntCalcLevels::Energy ($playerinfo['power'], $bntreg->level_factor) - $playerinfo['ship_energy'];
-    if ($free_power < $energyscooped)
-    {
-        // Limit the energy scooped to the maximum free power available.
-        $energyscooped = $free_power;
-    }
-
-    // Not too sure what this line is doing, may need to add debugging code.
-    // Could be checking for a negitive scoop value.
-    if ($energyscooped < 1)
-    {
-        $energyscooped = 0;
-    }
-
-    return $energyscooped;
-}
 ?>
